--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ header {
     top: 3rem;
     left: 3rem;
     font-size: 2rem;
-    color: white;
+    color: yellow;
   }
 
 nav {
   padding: 1rem 3rem ;
-  background: #333;
+  background:  red;
 }
 
   nav ul{
