--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+/*
 *{
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
-
+*/
 #container{
   width: 84%;
   max-width: 1280px;
@@ -68,6 +69,9 @@ main{
     padding: 3rem;
     background: #DDD;
   }
+
+
+
 
 footer {
   padding: 2rem 3rem;
