--- a/style.css
+++ b/style.css
@@ -22,27 +22,32 @@ header {
 
   header h1{
     position: absolute;
-    top: 3rem;
-    left: 3rem;
-    font-size: 2rem;
+    top: 2rem;
+    left:0;
+    width: 100%;
+    text-align: center;
     color: yellow;
+    font-size: 2rem;
   }
 
 nav {
   padding: 1rem 3rem ;
-  background:  red;
+  background:  #333;
 }
 
   nav ul{
     display: flex;
     flex-direction: row;
+    margin: 0;
   }
 
   nav ul li{
+    list-style: none;
     margin-right: 2rem;
   }
 
   nav ul li a {
+    text-decoration: none;
     color: white;
   }
 
@@ -57,12 +62,18 @@ main{
     background: #EEE;
   }
 
-    article{
-      min-height: 8rem;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      background: #FFF;
-    }
+  article{
+    min-height: 8rem;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    background: #FFF;
+  }
+
+
+  article img{
+    width:75%;
+  }
+
 
   aside{
     flex: 1;
@@ -70,12 +81,26 @@ main{
     background: #DDD;
   }
 
-
-
-
 footer {
   padding: 2rem 3rem;
   text-align: center;
   background: #333;
   color: white;
+}
+
+/* YouTube 動画　をフレキシブルにするための CSS */
+
+.youtube {
+     position: relative;
+     padding-bottom: 56.25%; /* 16:9の場合*/
+     height: 0;
+     overflow: hidden;
+}
+
+.youtube iframe {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
 }
